--- a/test.css
+++ b/test.css
@@ -36,6 +36,11 @@ button {
     box-shadow: 0 16px 36px rgb(52 213 68 / 22%);
     padding: 15px;
 }
+button:hover{
+    background-color: #f6980c;
+    box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+    transition: background-color ease-in 0.3s;
+}
 
 .about__image {
     width: 500px;
@@ -77,4 +82,89 @@ button {
 
 .about__info {
     max-width: 550px;
+}
+.form__container{
+    width: 500px;
+}
+.form{
+    background-color: #1D263A;
+    color: #fff;
+    padding-top: 115px;
+    padding-bottom:115px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.form form{
+    display: grid;
+    gap:20px;
+    margin-top: 60px;
+}
+.form h1{
+    font-size: 48px;
+
+}
+.form p{
+    font-size: 18px;
+    opacity: 0.65;
+}
+.form__group{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+}
+.form label{
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+.form input,select{
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0 20px 0;
+    border-radius: 15px;
+    border: none;
+}
+.form__submit{
+    font-size: 18px;
+    font-weight: 600;
+    margin-top:40px;
+}
+select{
+    appearance: none;
+}
+input{
+    outline: none;
+}
+footer{
+    padding: 90px 20px;
+    font-size: 16px;
+    font-weight: 600;
+}
+.footer__container{
+    display: flex;
+    justify-content:space-around ;
+}
+.footer__copyright{
+    text-align: center;
+    margin-top: 40px;
+    opacity: 0.5;
+}
+.footer_group{
+    margin-right: 90px;
+
+}
+h3{
+    font-size: 16px;
+    opacity: 0.7;
+    margin-bottom: 30px;
+}
+.footer__links{
+    display: flex;
+    flex-direction: column; 
+}
+.footer__links a{
+    margin-bottom: 15px;
 }
