--- a/test.css
+++ b/test.css
@@ -11,7 +11,7 @@ header {
     padding: 20px;
     position: sticky;
     background-color: #fff;
-    top:0;
+    top: 0;
     z-index: 1;
 }
 
@@ -40,7 +40,8 @@ button {
     box-shadow: 0 16px 36px rgb(52 213 68 / 22%);
     padding: 15px;
 }
-button:hover{
+
+button:hover {
     background-color: #f6980c;
     box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
     transition: background-color ease-in 0.3s;
@@ -87,43 +88,52 @@ button:hover{
 .about__info {
     max-width: 550px;
 }
-.form__container{
+
+.form__container {
     width: 500px;
 }
-.form{
+
+.form {
     background-color: #1D263A;
     color: #fff;
     padding-top: 115px;
-    padding-bottom:115px;
+    padding-bottom: 115px;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.form form{
+
+.form form {
     display: grid;
-    gap:20px;
+    gap: 20px;
     margin-top: 60px;
 }
-.form h1{
+
+.form h1 {
     font-size: 48px;
 
 }
-.form p{
+
+.form p {
     font-size: 18px;
     opacity: 0.65;
 }
-.form__group{
+
+.form__group {
     display: flex;
     flex-direction: column;
     text-align: left;
 }
-.form label{
+
+.form label {
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 20px;
 }
-.form input, .form select{
+
+.form input,
+.form select {
     font-size: 18px;
     color: #213053;
     height: 60px;
@@ -131,56 +141,233 @@ button:hover{
     border-radius: 15px;
     border: none;
 }
-.form__submit{
+
+.form__submit {
     font-size: 18px;
     font-weight: 600;
-    margin-top:40px;
+    margin-top: 40px;
 }
-select{
+
+select {
     appearance: none;
 }
-input{
+
+input {
     outline: none;
 }
-footer{
+
+footer {
     padding: 90px 20px;
     font-size: 16px;
     font-weight: 600;
 }
-.footer__container{
+
+.footer__container {
     display: flex;
-    justify-content:center ;
+    justify-content: center;
 }
-.footer__copyright{
+
+.footer__copyright {
     text-align: center;
     margin-top: 40px;
     opacity: 0.5;
 }
-.footer__group{
+
+.footer__group {
     margin-right: 80px;
 
 }
-footer h3{
+
+footer h3 {
     font-size: 16px;
     opacity: 0.7;
     margin-bottom: 30px;
 }
-.footer__links{
+
+.footer__links {
     display: flex;
-    flex-direction: column; 
+    flex-direction: column;
 }
-.footer__links a{
+
+.footer__links a {
     margin-bottom: 15px;
 }
-.about__sun-image{
+
+.about__sun-image {
     position: absolute;
     animation: rotation 10s infinite linear;
 }
+
+
+.features {
+    background-color: #fff;
+    padding: 115px 60px;
+}
+
+.features .cards {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 50px;
+}
+
+.features .cards .card {
+    padding: 35px 40px 25px;
+    border: solid 1px #D9E4E6;
+    border-radius: 5px;
+}
+
+.features .cards .card .h3 {
+    font-size: 16px;
+    line-height: 22px;
+    opacity: 0.8;
+}
+
+.features .cards .card .card__logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100px;
+    height: 100px;
+    font-size: 32px;
+    font-weight: 700;
+    background-color: #eaeff9;
+    border-radius: 50%;
+}
+
+.features .cards .card .card__logo span {
+    color: #ad1714;
+}
+
+.fa-chart-line {
+    color: #22a030;
+}
+
+.fa-solar-panel {
+    color: #ffb406;
+}
+
+.features__border {
+    width: 100%;
+    border: 1px solid #E6EAF4;
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+
+.features__feedback {
+    display: flex;
+}
+
+.features__feedback-left {
+    margin-right: 10px;
+}
+
+.features__feedback-left h2 {
+    font-size: 48px;
+}
+
+.features__feedback-left p {
+    font-size: 18px;
+    opacity: 0.7;
+    line-height: 26px;
+}
+
+.features__feedback-right {
+    display: flex;
+    align-items: center;
+}
+
+.features__box {
+    border-radius: 25px;
+    padding: 30px 40px 25px 40px;
+    color: white;
+}
+
+.features__box h3 {
+    font-size: 48px;
+    margin-top: 0;
+    margin-bottom: 20px;
+}
+
+.features__savings-box {
+    background-color: #dc5e26;
+    box-shadow: 0 6px 0 rgb(221 95 38 / 20%);
+    margin-right: 30px;
+}
+
+.features__rate-box {
+    background-color: #1D263A;
+    box-shadow: 0 6px 0 rgb(29 38 58 / 20%);
+}
+
+.stars {
+    color: #ff7039;
+}
+
+.promo {
+    display: flex;
+}
+
+.promo__image {
+    background-image: url(img/promo.jpg );
+    width: 50%;
+    flex-shrink: 0;
+    background-size: cover;
+    background-position: center;
+}
+
+.promo__right {
+    background: #dd5f26;
+    padding: 160px 60px;
+}
+
+.promo__text {
+    background-color: white;
+    padding: 30px 40px;
+    border-radius: 25px;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 26px;
+}
+
+.promo__text p::before {
+    content: '';
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background-color: #ec6b29;
+    margin-right: 10px;
+}
+
+.promo__text p {
+    opacity: 0.8;
+}
+
+.promo__text button {
+    background-color: #107b1c;
+    margin-top: 20px;
+    font-weight: 600;
+    font-size: 18px;
+    box-shadow: 0 16px 36px rgb(16 122 28 / 30%);
+    padding: 15px 30px;
+}
+
+.promo__button-wrap {
+    display: flex;
+    justify-content: center;
+}
+
+.promo__text button i {
+    font-size: 15px;
+    margin-left: 5px;
+}
+
 @keyframes rotation {
-    0%{
+    0% {
         transform: rotate(0deg);
     }
-    100%{
+
+    100% {
         transform: rotate(360deg);
     }
 }
@@ -189,68 +376,114 @@ footer h3{
     .about {
         padding: 115px 20px;
     }
-  
+
     .about h1 {
         font-size: 36px;
         line-height: 40px;
     }
-  
+
     .about__image {
         width: 280px;
     }
-  
+
     .about__sun-image {
         width: 75px;
         height: 75px;
     }
- }
-  
 
- @media (max-width: 720px) {
+}
+
+
+@media (max-width: 720px) {
+    .promo {
+        flex-direction: column-reverse;
+    }
+
+    .promo__right {
+        padding: 50px 10px;
+    }
+
+    .promo__image {
+        width: 100%;
+        height: 500px;
+    }
+
     header {
         padding: 10px;
     }
-  
+
     .header__logo {
         height: 20px;
     }
-  
+
     header a {
         margin-right: 10px;
     }
-  
+
     .about {
         flex-direction: column-reverse;
         padding: 50px 10px;
     }
-  
+
     .about h1 {
         font-size: 36px;
         line-height: 40px;
     }
-  
+
     .about__image {
         width: 280px;
     }
-  
+
     .about__sun-image {
         width: 75px;
         height: 75px;
     }
-  
+
     .form {
         padding: 50px 10px;
     }
-  
+
     .form h1 {
         font-size: 36px;
     }
-  
+
     footer {
         padding: 50px 10px;
     }
-  
+
     .footer__container {
         flex-direction: column;
     }
- }
+
+    .features {
+        padding: 50px 10px;
+    }
+
+    .features .cards {
+        grid-template-columns: auto;
+    }
+
+    .features__feedback {
+        flex-direction: column;
+    }
+
+    .features__feedback-left {
+        margin-right: 0;
+    }
+
+    .features__feedback-left h2,
+    .features__box h3 {
+        font-size: 36px;
+    }
+
+    .features__feedback-right {
+        flex-direction: column;
+        align-items: initial;
+    }
+
+    .features__savings-box {
+        margin-right: 0;
+        margin-bottom: 30px;
+    }
+
+}
