--- a/test.css
+++ b/test.css
@@ -9,10 +9,13 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    position: sticky;
-    background-color: #fff;
+    position: fixed;
+    background: transparent;
     top: 0;
+    left: 0;
+    right: 0;
     z-index: 1;
+    transition: 0.25s ease;
 }
 
 .header__logo {
@@ -27,6 +30,11 @@ a {
 header a {
     font-size: 15px;
     font-weight: 600;
+}
+
+.header__scrolled{
+    background-color: #ddd;
+    box-shadow:  12px 34px -11px rgb(65 62 101 / 10%);
 }
 
 button {
@@ -61,7 +69,7 @@ button:hover {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding-top: 115px;
+    padding-top: 200px;
     padding-bottom: 115px;
     background: url('img/back.png') no-repeat;
     background-position: center;
